# docs/swagger.yaml
@@ -352,6 +352,11 @@ definitions:
       totalPages:
         type: integer
     type: object
+  handlers.PatchApplicationRequestDto:
+    properties:
+      displayName:
+        type: string
+    type: object
   handlers.PatchUserRequestDto:
     properties:
       displayName:
@@ -1060,6 +1065,44 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get application
+      tags:
+      - applications
+    patch:
+      consumes:
+      - application/json
+      description: Update an application by ID from a virtual server
+      parameters:
+      - default: keyline
+        description: Virtual server name
+        in: path
+        name: vsName
+        required: true
+        type: string
+      - description: Application ID (UUID)
+        in: path
+        name: appId
+        required: true
+        type: string
+      - description: Application data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.PatchApplicationRequestDto'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+        "404":
+          description: Application not found
+        "500":
+          description: Internal Server Error
+      summary: Patch application
       tags:
       - applications
   /debug:
