# server/server.go
@@ -115,6 +115,7 @@ func Serve(dp *ioc.DependencyProvider) {
 	vsApiRouter.HandleFunc("/applications", handlers.CreateApplication).Methods(http.MethodPost, http.MethodOptions)
 	vsApiRouter.HandleFunc("/applications", handlers.ListApplications).Methods(http.MethodGet, http.MethodOptions)
 	vsApiRouter.HandleFunc("/applications/{appId}", handlers.GetApplication).Methods(http.MethodGet, http.MethodOptions)
+	vsApiRouter.HandleFunc("/applications/{appId}", handlers.PatchApplication).Methods(http.MethodPatch, http.MethodOptions)
 
 	r.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 
